Tue Jan 27 23:37:58 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Attempt to fix problems with groff requests
	  immediately following .SH NAME. All patterns in the MAN_FILE and
	  MAN_NAME states need to avoid matching trailing newlines, since
	  they're needed by other patterns to detect beginning-of-line.

	  In order to ignore any excess whitespace following .SH NAME, which
	  is how this problem got created, introduce a MAN_PRENAME start
	  condition, which just skips over spacing. Some evil use of yyless
	  is needed to transition properly to the MAN_NAME start condition
	  from this without eating trailing newlines.

Tue Jan 27 21:19:41 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in (LFLAGS): Add -d if LEXGROG_DEBUG=yes.

Wed Dec 24 10:29:16 UTC 2003  Giuseppe Sacco <eppesuig@debian.org>

	* src/whatis.c (usage): Fix usage message for --section
	* updated italian translation.

Wed Dec 24 10:10:16 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (usage): Fix usage message for --section, thanks to
	  Giuseppe Sacco.

Wed Dec 24 09:14:19 UTC 2003  Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation

Mon Nov 17 22:50:39 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Oops; stop decrementing
	  bsearched when it reaches the beginning of the cache->names array,
	  otherwise patterns beginning with a metacharacter cause a
	  segfault. (The decrement loop is necessary because bsearch()
	  doesn't specify which element it returns if there are multiple
	  matches.)

Mon Nov 17 05:04:54 GMT 2003  Colin Watson  <cjwatson@debian.org>

	Speed up mandb's purging functions further, from about 20 seconds to
	about 2 seconds on my i386 laptop, by being more intelligent about
	calling fnmatch().

	* src/globbing.c (cache_compare): New function.
	  (update_directory_cache): Sort the cache.
	  (pattern_compare): New function.