@@ -1,3 +1,8 @@
+Wed Jan 28 00:15:00 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: Add a terrifying hack to make '.B "..."' work in
+	  NAME sections. lex is really the wrong tool for this job, I feel.
+
 Tue Jan 27 23:37:58 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* src/lexgrog.l: Attempt to fix problems with groff requests
